# whisper-wrapper

./: .docker.env  .env.example  .gitignore  Cargo.toml  Dockerfile.linux  Dockerfile.local  Makefile  README.MD
src/: main.rs
